# Wildfire-Detection

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
data/: fire_archive_SV-C2_702607.csv
data/processed/: fire_reps.csv
models/: dataset.py  train_resnet.py
scripts/: build_candidates.py  download_dataset.py  map_fires.py  prepare_splits.py  utils.py
